# AI-Accountant

./: .gitignore  README.md
autobook/: .env.example  Dockerfile  docker-compose.yml  elasticmq.conf  pyproject.toml
autobook/backend/: config.py  local_identity.py  pipeline_persistence.py
autobook/backend/accounting_engine/: __init__.py  rules.py  tools.py
autobook/backend/api/: dependencies.py  main.py
autobook/backend/auth/: deps.py  token_service.py
autobook/backend/db/: credentials.py
autobook/backend/ml/: service.py
autobook/backend/normalization/: service.py
autobook/backend/queues/: __init__.py
autobook/backend/reporting/: statements.py
autobook/backend/schemas/: __init__.py  auth.py  clarifications.py  events.py  parse.py  queue_messages.py
autobook/backend/tests/: test_parse_api.py
autobook/backend/vectordb/: embeddings.py
autobook/docs/: AUTH_STATUS_FOR_ROBERT.md  DEPLOYED_AUTH_TEST_GUIDE.md  HANDOFF_TO_BEN_P2.md  auth-backend-design.md
autobook/frontend/: vite.config.ts
autobook/frontend/src/: App.test.tsx  (+2 more)
autobook/infra/: .gitignore
autobook/llm-experiment/: analysis.py  metrics.py  run.py  run_analysis.sh  run_experiment.sh
autobook/scripts/: __init__.py  migrate_transaction_schema.py  profile_a5_backend.py  render_coverage_summary.py
autobook/tests/: conftest.py  test_agent_pipeline.py  test_auth.py  test_config.py  test_ml_service.py  test_parse_api.py  test_precedent_pipeline.py  test_smoke_end_to_end.py  test_transaction_lifecycle.py
project/backend/: .env.example  Containerfile  alembic.ini  main.py  pyproject.toml
(+3066 files in other folders)
