[tool.poetry]
name = "autobook"
version = "0.1.0"
description = "Data processing pipeline for automated accounting"
authors = ["Robert <144620265+Robertlyhh@users.noreply.github.com>"]

readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pydantic = ">=2.12.5,<3.0.0"
pyarrow = ">=23.0.1,<24.0.0"
boto3 = ">=1.42.52,<2.0.0"
pandas = ">=3.0.1,<4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
