[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.1",
    "psycopg[binary]>=3.3.3",
    "pydantic[email,timezone]>=2.12.5",
    "sqlalchemy>=2.0.48",
]
